--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,58 +1,147 @@
 header {
-    display: flex;
-    background-color: white;
-    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
-    align-items: center;
-    align-content: center;
-    height: 4rem;
-  }
-
-head, body {
-    font-family: 'Roboto Condensed';
+  display: flex;
+  background-color: white;
+  box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
+  align-items: center;
+  align-content: center;
+  height: 4rem;
 }
 
-h2, h3, h4 {
-    font-family: 'Roboto Condensed';
+/* Fonts */
+@font-face {
+  font-family: "Noto-bold";
+  src: url("../../fonts/NotoSerif-Bold.eot");
+  src: url("../../fonts/NotoSerif-Bold.eot") format("embedded-opentype"),
+    url("../../fonts/NotoSerif-Bold.woff2") format("woff2"),
+    url("../../fonts/NotoSerif-Bold.woff") format("woff"),
+    url("../../fonts/NotoSerif-Bold.ttf") format("truetype"),
+    url("../../fonts/NotoSerif-Bold.svg#Noto-bold") format("svg");
+  font-weight: normal;
+  font-style: normal;
 }
 
+@font-face {
+  font-family: "google-Roboto";
+  src: url("../../fonts/Roboto-Light.eot");
+  src: url("../../fonts/Roboto-Light.eot") format("embedded-opentype"),
+    url("../../fonts/Roboto-Light.woff2") format("woff2"),
+    url("../../fonts/Roboto-Light.woff") format("woff"),
+    url("../../fonts/Roboto-Light.ttf") format("truetype"),
+    url("../../fonts/Roboto-Light.svg#google-Roboto") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Asignar tipo de letra a la pagina */
+head,
+body {
+  font-family: google-Roboto, sans-serif;
+}
+
+h2,
+h3,
+h4 {
+  font-family: Noto-bold, serif;
+}
+
+/* Parte del logo */
 .logo {
-    text-align: left;
-  }
-  
+  text-align: left;
+}
+
 .logo img {
-    height: auto;
-    width: auto;
-  }
-
-header p{
-    font-family: google-Roboto, sans-serif;
-    font-size: 2rem;
-    font-weight: 700;
-    color: #F14764;
-    margin-left: 1rem;
+  height: auto;
+  width: auto;
 }
 
-nav ul {
-    width: 75vw;
-    display: flex;
-    justify-content: right;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+/* Color del titulo de pagina */
+.pageTitle {
+  color: #f14764;
 }
 
-nav ul li a {
-    margin: 0 0.7vw;
-    text-decoration: underline;
-    transition: all ease-in-out 350ms;
-    padding: 5px;
-    color: black;
+/* Configuracion de Links y mini-animacion */
+.nav-links {
+  width: 75vw;
+  display: flex;
+  justify-content: right;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
-nav ul li a:hover{
-    color: #f33e3e;
-    background-color: #fff;
-    padding: 10px;
-    border-radius: 50px;
+.nav-links li a {
+  margin: 0 0.7vw;
+  text-decoration: none;
+  transition: all ease-in-out 350ms;
+  padding: 5px;
+}
+
+.nav-links li a:hover {
+  color: #f33e3e;
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 50px;
+}
+
+.nav-links li {
+  position: relative;
+}
+
+.nav-links li a:hover::before {
+  width: 80%;
+}
+
+/* Color para la pestaña actual */
+.active-tab {
+  color: #f2526e;
+}
+
+/* Configuracion del banner */
+.banner {
+  width: auto;
+  height: 267px;
+  background: url("../../images/banner.jpg");
+}
+
+/* Configuracion del contenido de la pagina */
+.grid {
+  margin: 0 auto;
+  display: grid;
+  justify-content: space-between;
+  grid-template-columns: 3fr 1fr;
+  gap: 20px;
+}
+
+/* Pos de la tabla */
+article {
+  width: auto;
+  height: auto;
+  padding: 2rem 4rem;
+  box-sizing: border-box;
+}
+
+/* Pos de la oferta de trabajo al costado */
+aside {
+  width: auto;
+  height: auto;
+  padding: 20px 25px;
+  box-sizing: border-box;
+  background: #f5f5f5;
+}
+
+aside h3 {
+  text-transform: uppercase;
+  color: #f2526e;
+}
+
+aside img {
+  height: 219px;
+  width: auto;
+}
+
+/* Footer */
+footer {
+  background-color: #d9d9d9;
+  padding: 2px 15px;
 }
