--- a/src/pages/Blog/styles.css
+++ b/src/pages/Blog/styles.css
@@ -86,6 +86,7 @@ h4 {
   text-decoration: none;
   transition: all ease-in-out 350ms;
   padding: 5px;
+  color: black;
 }
 
 .nav-links li a:hover {
@@ -112,4 +113,19 @@ h4 {
 footer {
   background-color: #d9d9d9;
   padding: 2px 15px;
+}
+
+main h2 {
+  font-family: 'Noto', serif;
+  color:#f2526e;
+  font-size: 30px;
+  margin-bottom: 0;
+}
+
+.date{
+  margin-top: 0;
+}
+
+main p {
+  font-family: 'Roboto Condensed', sans-serif;
 }
