--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -75,6 +75,7 @@ h4 {
   text-decoration: none;
   transition: all ease-in-out 350ms;
   padding: 5px;
+  color: black;
 }
 
 .nav-links li a:hover {
@@ -145,3 +146,58 @@ footer {
   background-color: #d9d9d9;
   padding: 2px 15px;
 }
+
+
+article h1{
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 36px;
+  color: #f2526e;
+  text-align: center;
+}
+
+.mainp {
+  font-family: 'Roboto Condensed', sans-serif;
+  color: black;
+  text-align: center;
+  font-style: normal;
+  font-size: 24px;
+}
+
+.rects {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  margin: 0 auto;
+  padding: 0;
+  width: 100%;
+  height: auto;
+}
+
+.rect{
+  box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #D9D9D9;
+  border-radius: 20px;
+  font-family: 'Roboto';
+  font-style: normal;
+  margin: 15px;
+  padding: 0;
+}
+
+.card_title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 auto;
+  margin: 0 auto;
+}
+
+.reviewer {
+  margin: 10px;
+  padding: auto;
+  width: 100%;
+  height: auto;
+}
+
