--- a/src/pages/Blog/styles.css
+++ b/src/pages/Blog/styles.css
@@ -57,7 +57,17 @@ h4 {
 
 /* Parte del logo */
 .logo {
+  background-image: url(../../images/logo.png);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   text-align: left;
+  width: auto;
+  height: auto;
+  margin: 0;
+  padding: 0;
+  margin-left: 2vw;
 }
 
 .logo img {
@@ -128,4 +138,28 @@ main h2 {
 
 main p {
   font-family: 'Roboto Condensed', sans-serif;
+}
+
+.blog1 {
+  background-image: url(../../images/blog1.jpg);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  width: 100%;
+  height: 180px;
+  padding: 0;
+}
+
+.blog2 {
+  background-image: url(../../images/blog2.jpg);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  width: 100%;
+  height: 180px;
+  padding: 0;
 }
