--- a/tarea6/app/templates/application.hbs
+++ b/tarea6/app/templates/application.hbs
@@ -1,7 +1,6 @@
 {{page-title "Tarea6"}}
 
 {{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
 {{!-- Feel free to remove this! --}}
-
+{{navbar}}
 {{outlet}}
