--- a/tarea6/app/templates/application.hbs
+++ b/tarea6/app/templates/application.hbs
@@ -1,6 +1,8 @@
 {{page-title "Tarea6"}}
 
-{{!-- The following component displays Ember's default welcome message. --}}
-{{!-- Feel free to remove this! --}}
-{{navbar}}
+{{! The following component displays Ember's default welcome message. }}
+{{! Feel free to remove this! }}
+
+{{!-- {{navbar}} --}}
+
 {{outlet}}
