add-product-page

--- a/tarea6/app/components/products/index.hbs
+++ b/tarea6/app/components/products/index.hbs
@@ -4,11 +4,12 @@
       <h1>Products</h1>
     </div>
     <div class="col-12 mt-2 mb-4">
-      <button
+      <a
         type="button"
         class="btn btn-outline-primary px-4"
+        href="addproduct"
         id="btnbody"
-      >ADICIONAR PRODUCTO</button>
+      >ADICIONAR PRODUCTO</a>
     </div>
   </div>
   <div class="row">
