--- a/tarea6/app/templates/application.hbs
+++ b/tarea6/app/templates/application.hbs
@@ -1,4 +1,4 @@
-{{page-title "Tarea6"}}
+{{page-title}}
 
 {{! The following component displays Ember's default welcome message. }}
 {{! Feel free to remove this! }}
