--- a/tarea6/app/components/newProduct/index.hbs
+++ b/tarea6/app/components/newProduct/index.hbs
@@ -8,13 +8,15 @@
     <div class="col-md-3">
       <label for="image" class="form-label">Image </label>
       <div class="col-md-12">
+        <img id="preview-image" src="#" alt="Preview Image" style="max-width: 200px;">
         <div class="input-group">
-          <input type="text" class="form-control" id="inputGroupFile02" placeholder="Select file from local drive">
+          <br>
+          {{!-- <input type="text" class="form-control" id="inputGroupFile02"> --}}
+          <input type="file" id="product-image" accept="image/*" placeholder="Select file from local drive">
           <span class="input-group-text" id="">Upload</span>
         </div>
       </div>
     </div>
-
     <div class="col-md-9">
       <div class="row">
         <div class="col-md-6">
@@ -56,5 +58,20 @@
   </div>
 
 
-
 </div>
+
+<script>
+  const imageInput = document.getElementById('product-image');
+  const previewImage = document.getElementById('preview-image');
+
+  imageInput.addEventListener('change', function () {
+    const file = imageInput.files[0];
+    const reader = new FileReader();
+
+    reader.onload = function (event) {
+      previewImage.src = event.target.result;
+    };
+
+    reader.readAsDataURL(file);
+  });
+</script>
