routing-from-logs-modified

--- a/tarea6/app/components/Login/index.hbs
+++ b/tarea6/app/components/Login/index.hbs
@@ -24,8 +24,10 @@
 
       <input
         class="btn btn-success w-100"
-        type="submit"
+        type="button"
         value="SIGN IN"
+        href="products"
+        onclick="window.location.href='products';"
         id="SignInButton"
       />
 
