--- a/tarea6/app/components/navbar/index.hbs
+++ b/tarea6/app/components/navbar/index.hbs
@@ -14,11 +14,12 @@
           <a class="nav-link me-5" href="/shop">Shop</a>
         </li>
         <li class="nav-item">
-          <button
+          <a
             type="button"
             class="btn btn-outline-primary px-4"
             id="btn"
-          >Logout</button>
+            href="/"
+          >Logout</a>
         </li>
       </ul>
     </div>
